Adjusted the width of the navbar to prevent wrapping

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ h1{
 }
 
 .topnav a{
-    width: 16.03%; /*--Why does this happen? Why isn't it 16.666666%? */
+    width: 15%; /*--Why does this happen? Why isn't it 16.666666%? */
     text-align: center;
     float:left;
     text-decoration: none;
